app/example/lah-kok-error.js
const element = document.querySelector('#nama');

// update nama
element.innerText = <?php echo $nama ?>; // error
